--- a/simple-program.html
+++ b/simple-program.html
@@ -6,13 +6,13 @@
 	<style>
 		#our-button{margin-bottom: 20px;}
 		ul#our-list{margin: 0; padding: 0;}
-		ul#our-list li{padding: 8px 0; border-bottom: #ccc solid 1px;}
+		ul#our-list li{padding: 8px 8px; border-bottom: #ccc solid 1px;}
 		ul#our-list li:first-child{border-top: #ccc solid 1px;}
-		ul#our-list li.active{background-color: #333;}
+		ul#our-list li.active{background-color: #30ba9e; color: #fff;}
 	</style>
 </head>
 <body>
-	<h1 id="our-headline">Hello This is Headding</h1>
+	<h1 id="our-headline">Hello This is Heading</h1>
 	<button id="our-button">Add new item</button>
 
 	<ul id="our-list">
