--- a/object-method.html
+++ b/object-method.html
@@ -11,7 +11,7 @@
 			myHouse.length = 65;
 			myHouse.width = 40;
 			myHouse.area = function(){ // my function define in object it is called method
-				return this.length * this.width // return is required for display on html page
+				return this.length * this.width // return is required for use out side also in html page
 			}
 
 		var urHouse = {
