--- a/free.html
+++ b/free.html
@@ -13,9 +13,8 @@
 		document.getElementById("check").onclick = function() {first()};
 
 		function first(){
-			var hfinal = document.body.getAttribute("data-id");
-
-			alert(hfinal);
+			var hFinal = document.body.getAttribute("data-id");
+			alert(hFinal);
 		}
 	</script>
 </body>
