--- a/test1/loopsWithArrays.html
+++ b/test1/loopsWithArrays.html
@@ -35,7 +35,7 @@
         console.log("Value:" + item);
       }
 
-      // for....of find Key
+      // for....of add Key
       console.log('for....of find Key')
       for(let [index, value] of num.entries()){
         console.log("Key: " + index + ", Value: " + value);
