--- a/test1/map_filter_reduce.html
+++ b/test1/map_filter_reduce.html
@@ -16,6 +16,7 @@
         console.log("Value: " + value + ", Index: " + index + ", Array: " + arr);
         return value + 2
       })
+      console.table(a)
       console.log(a) // get value form a return function
       
       // array filter method
