--- a/Exercise/SWandG.html
+++ b/Exercise/SWandG.html
@@ -30,7 +30,7 @@
       };
       let result = match(cpu, user);
       document.write(
-        `CPU:${cpu} <br> User:${user} <br>The winner is: ${result.toUpperCase()}`
+        `CPU:<b>${cpu}</b> <br> User:<b>${user}</b> <br>The winner is: <b>${result.toUpperCase()}</b>`
       );
     </script>
   </body>
