--- a/test1/sortMethod.html
+++ b/test1/sortMethod.html
@@ -20,14 +20,14 @@
             return a - b
         }
         num.sort(compare);
-        console.log(num)
+        console.log(num) // Output: [3, 5, 7, 12, 18, 24, 49, 56, 58]
 
         // descending order
         let compareNew = (a, b) => {
             return b - a
         }
         num.sort(compareNew);
-        console.log(num)
+        console.log(num) // Output: [58, 56, 49, 24, 18, 12, 7, 5, 3]
     </script>
 </body>
 </html>
