--- a/test1/testTwo.html
+++ b/test1/testTwo.html
@@ -6,7 +6,7 @@
     <title>Test Two</title>
 </head>
 <body>
-    
+    <h1>Please Check Browser Console</h1>
     <script>
         var a = [10,11,12,13,14];
         function print(b,...a){
@@ -38,7 +38,6 @@
                 return a + b;
             }
         }
-
         console.log(sum(8,9));
         console.log(sum(8)(9));
 
