text file update

--- a/test1/freeTest.html
+++ b/test1/freeTest.html
@@ -9,26 +9,8 @@
     <h1>Please Check Browser Console</h1>
 
     <script>
-      let str1 = "Bharat Singh Negi";
-      let str2 = "Pinky Rawat";
-
-      // Remove spaces and get characters only
-      let chars1 = str1.replace(/\s/g, "").split(""); // ['B','h','a','r','a','t','S','i','n','g','h','N','e','g','i']
-      let chars2 = str2.replace(/\s/g, "").split(""); // ['P','i','n','k','y','R','a','w','a','t']
-
-      let result = "";
-      let maxLength = Math.max(chars1.length, chars2.length);
-
-      for (let i = 0; i < maxLength; i++) {
-        if (i < chars1.length) {
-          result += chars1[i];
-        }
-        if (i < chars2.length) {
-          result += chars2[i];
-        }
-      }
-
-      console.log(result);
+      a = 100;
+      console.log(a)
     </script>
   </body>
 </html>
