--- a/test1/separate.html
+++ b/test1/separate.html
@@ -19,9 +19,9 @@
         (item) => typeof item === "string" && item.length === 1
       );
 
-      console.log("Numbers:", numbers);
-      console.log("Strings:", strings);
-      console.log("Characters:", characters);
+      console.log("Numbers:", numbers); // Output:- [100, 10, 8]
+      console.log("Strings:", strings); // Output:- ['Bharat', 'Singh'] 
+      console.log("Characters:", characters); // Output:- ['q', 'C']
     </script>
   </body>
 </html>
