--- a/test1/freeTest.html
+++ b/test1/freeTest.html
@@ -9,8 +9,7 @@
     <h1>Please Check Browser Console</h1>
 
     <script>
-      a = 100;
-      console.log(a)
+      console.log([]==false);
     </script>
   </body>
 </html>
