--- a/trickQuestion/trickAnswer.html
+++ b/trickQuestion/trickAnswer.html
@@ -31,7 +31,19 @@
       So y becomes 8. */
 
       /* --------------------- --------------------- */
+      //what is the value
+      console.log([]===[]); // This condition will always return 'false' since JavaScript compares objects by reference, not value.
+      console.log([]==[]); // This condition will always return 'false' since JavaScript compares objects by reference, not value.
 
+      /* --------------------- --------------------- */
+
+
+
+      /* --------------------- --------------------- */
+
+
+
+      /* --------------------- --------------------- */
     </script>
   </body>
 </html>
