--- a/Functions/print-word-one-by-one.html
+++ b/Functions/print-word-one-by-one.html
@@ -18,6 +18,7 @@
 
       let result = "";
       let maxLength = Math.max(chars1.length, chars2.length);
+      console.log(maxLength);
 
       for (let i = 0; i < maxLength; i++) {
         if (i < chars1.length) {
