--- a/trickQuestion/trickAnswer.html
+++ b/trickQuestion/trickAnswer.html
@@ -16,14 +16,14 @@
       console.log(Number(false)); // 0
 
       /* --------------------- --------------------- */
-      console.log(false ==! []) // False ==! False (Output:- true)
+      console.log(false == ![]); // False ==! False (Output:- true)
       // [] is an empty array, which is a truthy value in JavaScript.
       // ![] means not (truthy), so it becomes false.
       // So ![] → false.
 
       /* --------------------- --------------------- */
-      const arr = [8,9,10,11];
-      const [y] = arr
+      const arr = [8, 9, 10, 11];
+      const [y] = arr;
       console.log(y); // console.log(y) prints 8.
       /* const [y] = arr means we are extracting the first element from the array arr and assigning it to the variable y
       This is equivalent to: const y = arr[0];
@@ -32,38 +32,37 @@
 
       /* --------------------- --------------------- */
       //what is the value
-      console.log([]===[]); // This condition will always return 'false' since JavaScript compares objects by reference, not value.
-      console.log([]==[]); // This condition will always return 'false' since JavaScript compares objects by reference, not value.
+      console.log([] === []); // This condition will always return 'false' since JavaScript compares objects by reference, not value.
+      console.log([] == []); // This condition will always return 'false' since JavaScript compares objects by reference, not value.
 
       /* --------------------- --------------------- */
-      console.log({}==={}); // false - compares two distinct objects 
-      console.log({}=={}); // false - also compares object references, not their values
+      console.log({} === {}); // false - compares two distinct objects
+      console.log({} == {}); // false - also compares object references, not their values
       // Sometimes people think {} might be treated like an empty value (like [] or 0), but object equality is always by reference, not by value.
 
       /* --------------------- --------------------- */
       var a = 12;
-      console.log(a ** 12) // same as Math.pow() 12 12 time multiply
+      console.log(a ** 12); // same as Math.pow() 12 12 time multiply
 
       /* --------------------- --------------------- */
-      function test(){
-        salary = 12000,
-        console.log(salary)
+      function test() {
+        (salary = 12000), console.log(salary);
       }
-      test() // Answer: 12000
+      test(); // Answer: 12000
 
       /* --------------------- --------------------- */
-      function testTwo(){
-        console.log(testTwo.abc)
+      function testTwo() {
+        console.log(testTwo.abc);
       }
-      testTwo() // Answer: undefined
+      testTwo(); // Answer: undefined
       testTwo.abc = 400;
       testTwo.abc = 600;
-      testTwo() // Answer: 600 
+      testTwo(); // Answer: 600
 
       /* --------------------- --------------------- */
       let an = 10; // Primitive number.
       let b = new Number(10); // Creates a Number object, not a primitive. So typeof b → "object".
-      let c = 10; // Another primitive number. 
+      let c = 10; // Another primitive number.
 
       console.log(an === b); // false = primitive vs object
       console.log(b === c); // false = object vs primitive
@@ -73,16 +72,15 @@
       // true → when converted to a number → 1.
       // +true // Answer: 1
       console.log(+false); // Answer: 0
-      console.log(!'test'); // The logical NOT ! operator converts the value to a boolean, then negates it.
+      console.log(!"test"); // The logical NOT ! operator converts the value to a boolean, then negates it.
       // Non-empty strings (like 'test') are truthy.
       // !'test' → !true → false.
       // Answer: false
 
-
       /* --------------------- --------------------- */
-      var aa = {}
-      var bb = {key:'bb'}
-      var cc = {Key:'cc'}
+      var aa = {};
+      var bb = { key: "bb" };
+      var cc = { Key: "cc" };
 
       aa[bb] = 600; // aa[bb] → aa["[object Object]"]
       bb[cc] = 700; // bb[cc] → bb["[object Object]"]
@@ -93,17 +91,48 @@
       console.log(bb[cc]); // Answer: 700
 
       /* --------------------- --------------------- */
+      // to delete one by one
+      // function TodoList() {
+      //   const [items, setItems] = useState(["Apple", "Banana", "Orange"]);
 
+      //   const handleDelete = (itemToRemove) => {
+      //     setItems(items.filter((item) => item !== itemToRemove));
+      //   };
+
+      //   return (
+      //     <ul>
+      //       {items.map((item) => (
+      //         <li key={item}>
+      //           {item}
+      //           <button onClick={() => handleDelete(item)}>X</button>
+      //         </li>
+      //       ))}
+      //     </ul>
+      //   );
+      // }
+
+      /* --------------------- --------------------- */
+      const users = [
+        { id: 1, name: "Alice", role: "admin" },
+        { id: 2, name: "Bob", role: "user" },
+        { id: 3, name: "Bharat", role: "admin" },
+        { id: 4, name: "David", role: "user" },
+      ];
+
+      const output = users.reduce((acc, user) => {
+        const role = user.role;
+        if (!acc[role]) acc[role] = [];
+        acc[role].push(user);
+        return acc;
+      }, {});
+
+      console.log(output);
 
       /* --------------------- --------------------- */
 
-
       /* --------------------- --------------------- */
 
       /* --------------------- --------------------- */
-
-      /* --------------------- --------------------- */
-
 
       /* --------------------- --------------------- */
     </script>
